traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:27: error: not found: value x
    for (a <- 0 to 6-x) {   
                     ^